--- a/app/src/main/res/layout/play_program_layout.xml
+++ b/app/src/main/res/layout/play_program_layout.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/player_surface_frame_layout"
@@ -96,7 +96,7 @@
 
             <TextView
                 android:id="@+id/no_signal_tips"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
